# database-as-code

./: .gitignore  alembic.ini  mkdocs.yml  pyproject.toml
database_as_code/: __init__.py  connection.py
database_as_code/obligations/: __init__.py
tests/: test_connection_is_ok.py  test_with_sqlite.py
